--- a/.github/workflows/tf_workflow_plan_apply.yml
+++ b/.github/workflows/tf_workflow_plan_apply.yml
@@ -129,6 +129,11 @@ on:
         required: true
         type: string
         description: 'Either the GitHub username or organization name.'
+      
+      github_env:
+        required: false
+        type: string
+        default: default
 
     secrets:
       #Azure
